# sequential-recsys

./: .gitignore  log.txt  main.py  pyproject.toml
config/: config.yaml
src/data/: eda.py  preprocess.py  seqdataset.py  sequence.py
src/models/: sasrec.py
src/training/: popbaseline.py  sasrec_items.py  weighted_history_base.py
src/utils/: metrics.py
