[project]
name = "sequential-recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "pydantic>=2.13.3",
    "torch>=2.11.0",
    "wandb>=0.26.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
